# cmake

./: .gitignore  README.md
000__basic/: CMakeLists.txt  build.sh
00__basic/: CMakeLists.txt  main.cpp
010__header-and-source/: CMakeLists.txt  a.h
017__config-defines/: main.cpp
020__header-and-subfolders/: CMakeLists.txt  main.cpp
030__extern-libraries/: CMakeLists.txt  config.h.in
030__library/: CMakeLists.txt  main.cpp
032__library/: build.sh
032__library/src/: ChuckNorris.cpp
035__extern-libraries-optional/: build.sh
037__extern-libraries/include/: ChuckNorris.h
037__extern-libraries/src/: main.cpp
037__third-party-library/: CMakeLists.txt  build.sh
037__third-party-library/include/: ChuckNorris.h
037__third-party-library/src/: ChuckNorris.cpp
040__install-headers/: CMakeLists.txt
050__ctest/: CMakeLists.txt  main.cpp
060__have-function/: config.h.in
090__generator-ninja/: CMakeLists.txt
090__modularized/: CMakeLists.txt  build.sh
090__modularized/app/: CMakeLists.txt  spaceship.cpp
090__modularized/capacitor_lib/: CMakeLists.txt
090__modularized/display_lib/: CMakeLists.txt  display.cpp  display.h
090__modularized/engine_lib/: .#CMakeLists.txt  CMakeLists.txt  engine.cpp  engine.h
090__modularized/navigation_lib/: CMakeLists.txt
090__modularized/navigation_lib/src/: navigation.cpp
090__modularized/warp_lib/: CMakeLists.txt  warp.h
095__modularized-shared-lib/: CMakeLists.txt  build.sh  doty.sh
095__modularized-shared-lib/app/: spaceship.cpp
095__modularized-shared-lib/capacitor_lib/: capacitor.cpp  capacitor.h
095__modularized-shared-lib/navigation_lib/include/: navigation.h
095__modularized-shared-lib/warp_lib/: warp.xml
095__modularized-shared-lib__TODO/: build.sh  doty.sh
095__modularized-shared-lib__TODO/cmake/: toolchain.cmake
095__modularized-shared-lib__TODO/cmake/Platform/: platform.cmake
095__modularized-shared-lib__TODO/warp_lib/: warp.cpp
10__header-and-source/: CMakeLists.txt
15__header-and-include-dir/: CMakeLists.txt
15__header-and-source/: CMakeLists.txt
17__config-defines/: CMakeLists.txt  main.cpp
17__header-and-defines/: CMakeLists.txt  a.cpp  version.h.in
20__header-and-subfolders/: CMakeLists.txt
20__header-and-subfolders__TODO/: CMakeLists.txt
20__header-and-subfolders__TODO/src/: CMakeLists.txt
30__extern-libraries/: CMakeLists.txt  main.cpp
30__extern-libraries/LibA/: CMakeLists.txt
35__extern-libraries-optional/: CMakeLists.txt  config.h.in  main.cpp
35__extern-libraries-optional/LibA/: CMakeLists.txt
35__extern-libraries-optional/LibADir/: CMakeLists.txt
40__install-headers/: CMakeLists.txt
50__ctest/: CMakeLists.txt  main.cpp
50__ctest/include/: a.h
50__ctest/src/: a.cpp
60__have-function/: CMakeLists.txt  config.h.in  main.cpp
70__code-generation__TODO/: CMakeLists.txt
70__code-generation__TODO/generator_dir/: CMakeLists.txt
70__generator/: CMakeLists.txt  main.cpp
70__generator/generator_dir/: CMakeLists.txt  generator.cpp
70__generator__TODO/: main.cpp
80__package/: CMakeLists.txt
80__package__TODO/: License.txt
90__generator-ninja/: CMakeLists.txt
90__generator-ninja/include/: ChuckNorris.h
90__generator-ninja/src/: ChuckNorris.cpp  main.cpp
